<resources>
    <string name="app_name">好琴声</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">标题</string>
    <string name="sure">确定</string>
    <string name="确定">确定</string>
    <string name="account_number">账号：</string>
    <string name="account_number_hint">请输入账号</string>
    <string name="password_hint">密码</string>
    <string name="password">密码：</string>
    <string name="登录">登录</string>
    <string name="sign_in">登录</string>
    <string name="free_registration">免费注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="ordinary_member">普通会员</string>
    <string name="music_celebrity">音乐名人</string>
    <string name="music_teacher">音乐老师</string>
    <string name="music_classroom">音乐教室</string>
    <string name="main_page">首页</string>
    <string name="to_post">我要发帖</string>
    <string name="personal_center">个人中心</string>
    <string name="my_message">我的消息</string>
    <string name="new_activity">最新活动</string>
    <string name="live">直播课堂</string>
    <string name="more">更多</string>
    <string name="identity">身份：</string>
    <string name="level_hint">等级：</string>
    <string name="rule">积分规则</string>
    <string name="focus">关注</string>
    <string name="fans">粉丝</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="intelligent_sorting">智能排序</string>
    <string name="near_by">附近</string>
    <string name="see_map">查看地图</string>
    <string name="misic_teacher">音乐老师</string>
    <string name="misic_student">全部学员</string>
    <string name="timetable">课程表</string>
    <string name="tlq">讨论区</string>
    <string name="room_lease">琴房租赁</string>
    <string name="to_rant">我要租</string>
    <string name="letter">私信</string>
    <string name="guanzhu">+关注</string>
    <string name="recommended_video">推荐视频</string>
    <string name="course_center">课程中心</string>
    <string name="comments">介绍评论</string>
    <string name="classroom_comments">琴行介绍</string>
    <string name="announcements">琴行动态</string>
    <string name="excellent_videos">优秀视频</string>
    <string name="teacher_videos">老师视频</string>
    <string name="student_videos">学生视频</string>
    <string name="video_style">视频类型：</string>
    <string name="video_style1">上传视频</string>
    <string name="video_style2">圈子视频</string>
    <string name="music_select">选择</string>
    <string name="send">发送</string>
    <string name="I_need_to_ask_a_question">我要提问</string>
    <string name="video">视频</string>
    <string name="music">音乐</string>
    <string name="picture">图片</string>
    <string name="yuepu">乐谱</string>
    <string name="theme">主题</string>
    <string name="type">类型</string>
    <string name="style">风格</string>
    <string name="author">作者</string>
    <string name="content">内容</string>
    <string name="select_please">请选择</string>
    <string name="this_location">所在的位置</string>
    <string name="sort_address">地区筛选</string>
    <string name="sort_time">时间筛选</string>
    <string name="classification">分类</string>
    <string name="sort">排序</string>
    <string name="home">主页</string>
    <string name="basic_info">基本信息</string>
    <string name="calendar">日历</string>
    <string name="activity_des">活动介绍</string>
    <string name="activity_video">活动视频 </string>
    <string name="activity_comment">活动评论</string>
    <string name="activity_summary">活动总结</string>
    <string name="show_bm">查看报名</string>
    <string name="activity_cost">活动费用 </string>
    <string name="evaluation_number">评论 </string>
    <string name="sign_up">我要报名 </string>
    <string name="my_friend">我的关注</string>
    <string name="my_buddy">我的知音</string>
    <string name="my_fans">我的粉丝</string>
    <string name="search_content">搜索内容</string>
    <string name="competition">赛事</string>
    <string name="historical_return">历史回顾</string>
    <string name="account_security">账户安全</string>
    <string name="all_dynamic">全站动态</string>
    <string name="recommend_post">推荐帖子</string>
    <string name="friend_dynamics">知音动态</string>
    <string name="has_chose">已选择</string>
    <string name="picture_unit">张</string>
    <string name="please_choose_pic">选择图片</string>
    <string name="arrive_limit_count">已达到最大选择数</string>
    <string name="photos_num">%1$d张</string>
    <string name="facebook_app_id">147509055691991</string>
    <string name="commit_num">确定(%1$d/%2$d)</string>
    <string name="msg_maxi_capacity">已达到照片选择上限</string>
    <string name="msg_no_camera">没找到摄像头</string>
    <string name="关注_hint">关注：</string>
    <string name="粉丝数_hint">粉丝数：</string>
    <string name="post">发帖</string>
    <string name="filter">筛选</string>
    <string name="home_page">首页</string>
    <string name="message">消息</string>
    <string name="activity">活动</string>
    <string name="select_music">选择音乐</string>
    <string name="pay">支付</string>
    <string name="search">搜索</string>
    <string name="map">地图</string>
    <string name="select_position">选择位置</string>
    <string name="personal_space">个人空间</string>
    <string name="classroom_detail">教室详情</string>
    <string name="to_comment">我要评论</string>
    <string name="介绍评论">介绍评论</string>
    <string name="教室评论">教室评论</string>
    <string name="老师评论">老师评论</string>
    <string name="活动公告">我的动态</string>
    <string name="课程中心详情">课程中心详情</string>
    <string name="我的课程">课程管理</string>
    <string name="讨论专区">讨论专区</string>
    <string name="讨论区详情">讨论区详情</string>
    <string name="活动详情">活动详情</string>
    <string name="活动介绍">活动介绍</string>
    <string name="通讯录">通讯录</string>
    <string name="我的账户">我的账户</string>
    <string name="我的收藏">我的收藏</string>
    <string name="我的发帖">我的发帖</string>
    <string name="我的资料">我的资料</string>
    <string name="个人资料">个人资料</string>
    <string name="达人资料">达人资料</string>
    <string name="教师资料">教师资料</string>
    <string name="教室资料">教室资料</string>
    <string name="用户注册">用户注册</string>
    <string name="乐器资讯">原创新闻</string>
    <string name="乐器资讯详情">原创新闻详情</string>
    <string name="音乐新闻">音乐新闻</string>
    <string name="新闻详情">新闻详情</string>
    <string name="音乐广场详情">音乐广场详情</string>
    <string name="图片预览">图片预览</string>
    <string name="订单详情">订单详情</string>
    <string name="老师详情">老师详情</string>
    <string name="新增视频推荐">新增视频推荐</string>
    <string name="请选择活动发布人">请选择活动发布人</string>
    <string name="请选择活动地址">请选择活动地址</string>
    <string name="请选择结束时间">请选择结束时间</string>
    <string name="请选择开始时间">请选择开始时间</string>
    <string name="请输入活动简介">请输入活动简介</string>
    <string name="请选择赛事名称">请选择赛事名称</string>
    <string name="发布活动">发布活动</string>
    <string name="发布">发布</string>
    <string name="我的活动">我的活动</string>
    <string name="我要评论">我要评论</string>
    <string name="请选择上传视频">请选择上传视频</string>
    <string name="请选择组别">请选择组别</string>
    <string name="请选择赛区">请选择赛区</string>
    <string name="请填写推荐老师的电话">请填写推荐老师的电话</string>
    <string name="请填写推荐老师">请填写推荐老师</string>
    <string name="请填写活动曲目">请填写活动曲目</string>
    <string name="请填写详细地址">请填写详细地址</string>
    <string name="请输入证件号码">请输入证件号码</string>
    <string name="请添加身份证照">请添加身份证照</string>
    <string name="请选择地址">请选择地址</string>
    <string name="请选择图片">请选择图片</string>
    <string name="请选择头像">请选择头像</string>
    <string name="请输入区号">请输入区号</string>
    <string name="请输入手机号">请输入联系电话</string>
    <string name="请输入正确的手机号">请输入正确的手机号</string>
    <string name="请输入姓名">请输入姓名</string>
    <string name="请输入密码">请输入密码</string>
    <string name="请再次输入密码">请再次输入密码</string>
    <string name="请输入验证码">请输入验证码</string>
    <string name="请输入旧密码">请输入旧密码</string>
    <string name="请输入新密码">请输入新密码</string>
    <string name="请再次输入新密码">请再次输入新密码</string>
    <string name="二次密码不相同">二次密码不相同</string>
    <string name="请输入邮箱">请输入邮箱</string>
    <string name="请输入机构名称">请输入机构名称</string>
    <string name="请输入真实姓名">请输入真实姓名</string>
    <string name="请输入评论内容">请输入评论内容</string>
    <string name="请输入名称">请输入名称</string>
    <string name="请选择类型">请选择类型</string>
    <string name="请选择上课时间">请选择上课时间</string>
    <string name="请输入价格">请输入价格</string>
    <string name="请输入上课人数">请输入上课人数</string>
    <string name="请输入课时">请输入课时</string>
    <string name="请输入单课时长">请输入单课时长</string>
    <string name="请输入简介">请输入简介</string>
    <string name="请选择缴费方式">请选择缴费方式</string>
    <string name="请选择封面图">请选择封面图</string>
    <string name="请尽快完善信息">请尽快完善信息</string>
    <string name="请先完善资料">请先完善资料</string>
    <string name="请填写内容">请填写内容</string>
    <string name="请选择分类">请选择分类</string>
    <string name="请填写主题">请填写主题</string>
    <string name="请选择视频">请选择视频</string>
    <string name="请选择时间">请选择时间</string>
    <string name="暂无组别">暂无组别</string>
    <string name="活动费用">活动费用</string>
    <string name="发布人">发布人：</string>
    <string name="举办活动地点">举办活动地点：</string>
    <string name="到">到</string>
    <string name="活动时间">投票时间：</string>
    <string name="活动总结">活动总结</string>
    <string name="活动评论">活动评论</string>
    <string name="海选投票">海选投票</string>
    <string name="发布帖子">发布帖子</string>
    <string name="删除成功">删除成功</string>
    <string name="你确定删除吗">你确定删除吗？</string>
    <string name="发布课程">发布课程</string>
    <string name="节">节</string>
    <string name="课时">课时：</string>
    <string name="地址_hint">地址：</string>
    <string name="电话_hint">电话：</string>
    <string name="教学质量">教学质量  </string>
    <string name="环境">环境  </string>
    <string name="服务">服务 </string>
    <string name="已关注">已关注</string>
    <string name="未认证">未认证</string>
    <string name="已认证">已认证</string>
    <string name="没有检索到结果">没有检索到结果</string>
    <string name="回复">评论</string>
    <string name="无法定位">无法定位</string>
    <string name="微信">微信</string>
    <string name="支付宝">支付宝</string>
    <string name="银联">银联</string>
    <string name="取消">取消</string>
    <string name="cancel">取消</string>
    <string name="报名成功">报名成功,请到个人中心支付并等待审核</string>
    <string name="提交成功">提交成功,请到个人中心支付</string>
    <string name="版本升级">版本升级</string>
    <string name="有更高版本是否升级">有更高版本是否升级</string>
    <string name="click_again_from_exit">再按一次退出程序</string>
    <string name="cannot_load_more">数据已经加载完了！</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="请选择活动参加人数">请选择活动参加人数</string>
    <string name="等待审核">发布成功，等待审核</string>
    <string name="请先播放视频">请先播放视频</string>
    <string name="投票成功">投票成功</string>
    <string name="添加朋友">添加朋友</string>
    <string name="搜索内容不能为空">搜索内容不能为空</string>
    <string name="提现">提现</string>
    <string name="当前可提现金额">当前可提现金额为:￥</string>
    <string name="支付宝账号">支付宝账号</string>
    <string name="银行卡">银行卡</string>
    <string name="发送验证码">发送验证码</string>
    <string name="剩余">剩余</string>
    <string name="秒">秒</string>
    <string name="支付宝账号不能为空">支付宝账号不能为空</string>
    <string name="银行卡号不能为空">银行卡号不能为空</string>
    <string name="银行名称不能为空">银行名称不能为空</string>
    <string name="开户行不能为空">开户行不能为空</string>
    <string name="请输入金额">请输入金额</string>
    <string name="提现金额不能大于当前余额">提现金额不能大于当前余额</string>
    <string name="绑定手机">绑定手机</string>
    <string name="修改密码">修改密码</string>
    <string name="旧密码">旧密码</string>
    <string name="添加">添加</string>
    <string name="收入记录">收入记录</string>
    <string name="提现记录">提现记录</string>
    <string name="提现金额不足">提现金额不足,无法提现</string>
    <string name="num_hint">数量：</string>
    <string name="buy">&gt;&gt; 立即购买 &lt;&lt;</string>
    <string name="commodity_name_hint">购买商品：</string>
    <string name="product_type_hint">产品分类：</string>
    <string name="pay_type_hint">支付方式：</string>
    <string name="online_payment">在线支付</string>
    <string name="shipping_methods_hint">配送方式：</string>
    <string name="invoice_hint">发票：</string>
    <string name="receiving_address_hint">收货地址：</string>
    <string name="contact_way_hint">联系方式：</string>
    <string name="linkman_hint">联系人：</string>
</resources>