<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" 
        android:visibility="gone">

        <com.greattone.greattone.widget.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_style" />

        <com.greattone.greattone.widget.MyRadioButton
            android:id="@+id/rb_video1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/rb_button"
            android:padding="5dp"
            android:text="@string/video_style1"
            android:textSize="18sp" />

        <com.greattone.greattone.widget.MyRadioButton
            android:id="@+id/rb_video2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/rb_button"
            android:padding="5dp"
            android:text="@string/video_style2"
            android:textSize="18sp" />
    </RadioGroup>

    <com.greattone.greattone.widget.MyEditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit_bg"
        android:gravity="top|start"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/title"
        android:padding="5dp" />
    <com.greattone.greattone.widget.MyEditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_bg"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:padding="5dp" />

<com.greattone.greattone.widget.MyGridView
                android:id="@+id/gv_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:listSelector="@android:color/transparent"
                android:numColumns="4"
                android:scrollingCache="false" >
            </com.greattone.greattone.widget.MyGridView>

    <com.greattone.greattone.widget.MyTextView
        android:id="@+id/tv_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_b90006"
        android:layout_margin="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/send"
        android:textColor="@color/white" />

</LinearLayout>