<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical" >

                <com.greattone.greattone.widget.MyTextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp" />

                <com.greattone.greattone.widget.MyTextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp" />

                <LinearLayout android:id="@+id/ll_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp" >

                    <!-- 举办地 -->

                    <com.greattone.greattone.widget.MyTextView
                        android:id="@+id/tv_address"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                    <!-- 查看地图 -->

                    <com.greattone.greattone.widget.MyTextView
                        android:id="@+id/tv_see_map"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/post_location"
                        android:drawableStart="@drawable/post_location"
                        android:text="@string/see_map" />
                </LinearLayout>
                <!-- 发布人 -->

                <com.greattone.greattone.widget.MyTextView
                    android:id="@+id/tv_iss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_eeeeee" />
                <!-- 活动介绍 -->

                <com.greattone.greattone.widget.MyTextView
                    android:id="@+id/tv_activity_des"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/activity_des" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_eeeeee" />
                <!-- 活动视频 -->

                <com.greattone.greattone.widget.MyTextView
                    android:id="@+id/tv_activity_video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/activity_video" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_eeeeee" />
                <!-- 活动评论 -->

                <com.greattone.greattone.widget.MyTextView
                    android:id="@+id/tv_activity_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/activity_comment" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_eeeeee" />
                <!-- 活动总结 -->

                <com.greattone.greattone.widget.MyTextView
                    android:id="@+id/tv_activity_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/activity_summary" />   
                       <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_eeeeee" />
                <!-- 查看报名-->

                <com.greattone.greattone.widget.MyTextView
                    android:id="@+id/tv_bm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/show_bm"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout android:id="@+id/ll_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!-- 活动费用 -->

        <com.greattone.greattone.widget.MyTextView
            android:id="@+id/tv_activity_cost"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/select_button_bg"
            android:gravity="center"
            android:text="@string/activity_cost" />
        <!-- 评价数 -->

        <com.greattone.greattone.widget.MyTextView
            android:id="@+id/tv_evaluation_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/select_button_bg"
            android:gravity="center"
            android:text="@string/evaluation_number" />
        <!-- 我要报名 -->

        <com.greattone.greattone.widget.MyTextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/red_b90006"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/sign_up"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>